Bug 107718 - Some of old Hangul not rendering faithfully in vertical layout
Summary: Some of old Hangul not rendering faithfully in vertical layout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.3.1 rc
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords:
Depends on: HarfBuzz
Blocks: Vertical-Text
  Show dependency treegraph
 
Reported: 2017-05-09 09:27 UTC by Volga
Modified: 2023-06-23 20:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test File (11.05 KB, application/vnd.oasis.opendocument.text)
2017-05-09 09:28 UTC, Volga
Details
Screenshot (104.05 KB, image/png)
2017-05-09 09:29 UTC, Volga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volga 2017-05-09 09:27:42 UTC
Description:
Several Hangul Jamos can conjoining together in horizontal layout, but when I switch into vertical layout, they are failed.

Steps to Reproduce:
1. Open LO Writer
2. Insert -> Frame -> Frame Interactively
3. Copy texts from https://ko.wikisource.org/wiki/%ED%9B%88%EB%AF%BC%EC%A0%95%EC%9D%8C%EC%96%B8%ED%95%B4
4. Select the whole text and using Source Han Sans
5. Set the text vertically in frame

Actual Results:  
Several Hangul Jamos not joined into syllable as my attached image

Expected Results:
All Hangul Jamos should joining into syllable in vertical layout, they should works as the following image:
http://www.typeisbeautiful.com/wp-content/uploads/2017/04/archaicHangul.png


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 Volga 2017-05-09 09:28:50 UTC
Created attachment 133182 [details]
Test File
Comment 2 Volga 2017-05-09 09:29:31 UTC
Created attachment 133183 [details]
Screenshot
Comment 3 Buovjaga 2017-05-13 16:18:22 UTC
Confirmed.

Font is here: https://mirrors.tuna.tsinghua.edu.cn/adobe-fonts/source-han-sans/OTC/

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha1+
Build ID: c0968aa4673a8ac9a8a09a0e291b58b94bdbb35e
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on May 13th 2016
Comment 4 QA Administrators 2018-05-14 02:29:11 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2020-05-14 03:48:57 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2022-05-15 03:45:24 UTC Comment hidden (obsolete)
Comment 7 Volga 2022-09-06 03:29:44 UTC
It's still happened on

Version: 7.4.0.3 (x86) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: zh-CN
Calc: threaded
Comment 8 Commit Notification 2023-06-20 12:20:43 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1afc13b0b84353109827d78807836c01f030ab66

tdf#107718: Fix script itemization of vertical text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-20 14:56:31 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c44e725fd4cd0d943b7e138889c5621c8f00ddcd

tdf#107718: Fix script itemization of vertical text

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-06-23 20:53:32 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/19825bfe38820b9abd5281c9f3ca60297693bae5

tdf#107718: Fix script itemization of vertical text

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.