tdf#107718: Fix script itemization of vertical text

Mixed script vertical text was not correctly splitting runs at script
changes, resulting in Hangul text being mixed with Han text in the same
run breaking the Hangul composition.

Change-Id: I09c3f799bede6aa8a19684779d500504a9813af7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153313
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 1afc13b0b84353109827d78807836c01f030ab66)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153335
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>